refactor linked list

--- a/linked-list/makefile
+++ b/linked-list/makefile
@@ -1,2 +1,5 @@
 linkl:linkl.c
 	gcc linkl.c -o linkl -Wall -Wextra -pedantic -std=c99
+
+seg:seg.c
+	gcc seg.c -o seg -Wall -Wextra -pedantic -std=c99	
